Fix: Refactor step 6 - move inventory and others